--- a/src/components/alert/index.html
+++ b/src/components/alert/index.html
@@ -11,7 +11,9 @@
     <!-- Header -->
     <include src="partials/header.html"></include>
 
-    <!-- Alert Variations -->
+    <!-- Component Start -->
+
+    <!-- Alret Variations -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 max-w-6xl mx-auto px-10" >
         <div class="flex w-full space-y-10 flex-col">
             <h3 class="text-xl font-semibold text-gray-800">Alert Variation 1</h3>
@@ -165,5 +167,7 @@
           </div>
         </div>
     </div>
+
+    <!-- Component End -->
 </body>
 </html>
