Added 1 navigation component and 6 transaction components.

--- a/src/components/01-navigation/index.html
+++ b/src/components/01-navigation/index.html
@@ -19,26 +19,26 @@
 
   <!-- Navigation -->
   <nav
-    class="w-full py-3 bg-indigo-50 border-b border-gray-300 flex items-center md:justify-around justify-between font-Inter">
+    class="w-full py-3 bg-blue-900 border-b border-gray-300 flex items-center md:justify-around justify-between font-Inter">
     <div class="flex space-x-5">
-      <div class="pl-5">
+      <div class="pr-5 pl-5 md:pl-0">
         <a class="" href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="#CCFFEB">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
               d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
           </svg>
         </a>
       </div>
-      <div class="md:w-103 md:flex hidden items-center space-x-4 font-normal text-sm text-gray-400">
-        <a class="hover:text-gray-600" href="#">Home</a>
-        <a class="hover:text-gray-600" href="#">Products</a>
-        <a class="hover:text-gray-600" href="#">Blog</a>
-        <a class="hover:text-gray-600" href="#">Team</a>
+      <div class="md:w-103 md:flex hidden items-center space-x-4 font-medium text-sm text-green-200">
+        <a class="hover:text-green-100" href="#">Home</a>
+        <a class="hover:text-green-100" href="#">Products</a>
+        <a class="hover:text-green-100" href="#">Blog</a>
+        <a class="hover:text-green-100" href="#">Team</a>
       </div>
     </div>
     <div class="flex space-x-5 items-center">
       <div>
-        <a class="flex items-center font-semibold text-sm text-indigo-800" href="#">
+        <a class="flex items-center font-semibold text-sm text-green-200" href="#">
           <span class="mr-1 ">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
@@ -53,44 +53,38 @@
         <svg width="15" height="19" viewBox="0 0 15 19" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M12.75 12.7812V8.40625C12.75 5.72 11.3237 3.47125 8.8125 2.87625V2.28125C8.8125 1.555 8.22625 0.96875 7.5 0.96875C6.77375 0.96875 6.1875 1.555 6.1875 2.28125V2.87625C3.685 3.47125 2.25 5.71125 2.25 8.40625V12.7812L0.5 14.5312V15.4062H14.5V14.5312L12.75 12.7812ZM7.5 18.0312C8.4625 18.0312 9.25 17.2437 9.25 16.2812H5.75C5.75 17.2437 6.5375 18.0312 7.5 18.0312ZM4 13.6562H11V8.40625C11 6.23625 9.67875 4.46875 7.5 4.46875C5.32125 4.46875 4 6.23625 4 8.40625V13.6562Z"
-            fill="#6A7EA5" />
+            fill="#a7f3d0" />
         </svg>
       </a>
       <div class="flex items-center">
         <a class="flex items-center" href="#">
-          <span class="mr-2">
+          <span class="mr-0 flex flex-col justify-center items-center">
             <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="14.5" cy="14.5" r="14.5" fill="#D9DAFF" />
-              <path
-                d="M8.34772 18.8109L9.15043 16.5509H12.3769L13.1796 18.8109H14.1927L11.2624 10.8306H10.2649L7.33459 18.8109H8.34772ZM9.45437 15.6936L10.7325 12.0931H10.7948L12.0729 15.6936H9.45437Z"
-                fill="#414476" />
-              <path
-                d="M15.4357 18.8109H18.3193C20.2052 18.8109 20.9846 17.8913 20.9846 16.6911C20.9846 15.4286 20.1117 14.7428 19.3791 14.696V14.6181C20.065 14.4311 20.6728 13.9791 20.6728 12.9503C20.6728 11.7813 19.8935 10.8306 18.2257 10.8306H15.4357V18.8109ZM16.4021 17.9536V15.1792H18.366C19.4103 15.1792 20.065 15.8806 20.065 16.6911C20.065 17.3925 19.5818 17.9536 18.3193 17.9536H16.4021ZM16.4021 14.3376V11.6878H18.2257C19.2856 11.6878 19.7532 12.2489 19.7532 12.9503C19.7532 13.792 19.0674 14.3376 18.1946 14.3376H16.4021Z"
-                fill="#414476" />
+              <circle cx="14.5" cy="14.5" r="14.5" fill="#d1fae5" />
             </svg>
+            <p class="-mt-6 font-bold text-blue-800">JT</p>
           </span>
-          <p>Aditya Bundoo</p>
+          <p class="hidden md:block text-green-100 font-normal pl-2">Jay Thakare</p>
+          <a href="#" class="">
+            <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg class="h-4 w-6" id="Layer_1" style="enable-background:new 0 0 512 512;" fill="#d1fae5" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M98.9,184.7l1.8,2.1l136,156.5c4.6,5.3,11.5,8.6,19.2,8.6c7.7,0,14.6-3.4,19.2-8.6L411,187.1l2.3-2.6  c1.7-2.5,2.7-5.5,2.7-8.7c0-8.7-7.4-15.8-16.6-15.8v0H112.6v0c-9.2,0-16.6,7.1-16.6,15.8C96,179.1,97.1,182.2,98.9,184.7z"/></svg>
+          </a>
         </a>
-        <a href="#" class="invisible md:visible">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-6 " fill="none" viewBox="0 0 24 24"
-            stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-          </svg>
-        </a>
-        <div class="md:hidden">
+        <div class="md:hidden ml-4">
           <div id="burger" class=" cursor-pointer">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 mr-8" viewBox="0 0 20 20" fill="currentColor">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 mr-8" viewBox="0 0 20 20" fill="#d1fae5">
               <path fill-rule="evenodd"
                 d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                 clip-rule="evenodd" />
             </svg>
           </div>
           <div id="menu"
-            class="hidden font-inter font-normal text-md  text-gray-400 text-center flex flex-col absolute right-6 top-48 w-48 py-6 bg-indigo-50 border border-gray-300 rounded">
-            <a class=" py-4 px-3 hover:text-gray-600" href="#">Home</a>
-            <a class=" py-4 px-3 hover:text-gray-600 " href="#">Products</a>
-            <a class=" py-4 px-3 hover:text-gray-600 " href="#">Blog</a>
-            <a class=" py-4 px-3 hover:text-gray-600 " href="#">Team</a>
+            class="hidden font-inter font-normal text-md  text-green-200 text-center absolute right-6 top-48 w-48 py-6 bg-blue-900 border border-gray-300 rounded">
+            <div class="flex flex-col ">
+              <a class=" py-4 px-3 hover:text-green-100" href="#">Home</a>
+              <a class=" py-4 px-3 hover:text-green-100" href="#">Products</a>
+              <a class=" py-4 px-3 hover:text-green-100" href="#">Blog</a>
+              <a class=" py-4 px-3 hover:text-green-100" href="#">Team</a>
+            </div>
           </div>
         </div>
       </div>
