--- a/src/components/01-transaction-variant2/index.html
+++ b/src/components/01-transaction-variant2/index.html
@@ -15,10 +15,11 @@
 
     <!-- Component Start -->
 
-    <div class=" h-40 bg-blue-50 w-full"></div>
     <!-- main section starts -->
     <section
-        class="mb-20 mx-auto py-8 sm:py-7 px-4 sm:px-9 -mt-20 bg-white w-11/12 sm:w-4/5 md:w-[70%] lg:w-1/2 xl:w-34r  drop-shadow font-inter border">
+        class="mb-20 mx-auto py-8 sm:py-7 px-4 sm:px-9 bg-gray-100 w-11/12 sm:w-4/5 md:w-[70%] lg:w-1/2 xl:w-34r  drop-shadow font-inter border">
+        <!-- Note: Here above in section's class, I have mentioned `xl:w-34r`. `w-34r` is a new utility I had created for 'width=34rem', because 34rem value is not present in default tailwind uitilities. But since intructor of this repository has clearly mentioned not to make any changes in config.js file, I didn't make new utility. If you are working with this file for any other project just add `width:{'34r': '34rem',},` in `tailwind.config.js > module.export > theme > extends`. -->
+        <!-- part 1 starts -->
         <h1 class="font-bold text-lg text-black">Investment</h1>
         <h3 class="font-normal text-lg text-gray-400">Get started with investment</h3>
 
@@ -27,25 +28,25 @@
             <!-- amount tab -->
             <label for="amount" class="flex flex-col cursor-pointer">
                 <span class="mb-4">Amount</span>
-                <div class="w-full flex rounded-md border-gray-300 border">
+                <div class="w-full flex rounded-md border-gray-300 border bg-white">
                     <select
-                        class="py-4 pl-4 border-transparent rounded-md focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent">
+                        class="py-4 pl-4 rounded-md focus:outline-none">
                         <option value="AED">AED</option>
                         <option value="ARS">ARS</option>
-                        <option value="INR">INR</option>
-                        <option value="USD" selected>USD</option>
+                        <option value="INR" selected>INR</option>
+                        <option value="USD">USD</option>
                     </select>
                     <input type="number" name="amount" id="amount"
-                        class="border-0 rounded-r-md w-full border-l-0 border-gray-400 focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent py-4 px-4 sm:px-8"
+                        class="border-0 rounded-r-md w-full focus:outline-none py-4 px-4 sm:px-8"
                         placeholder="Enter amount">
                 </div>
             </label>
 
             <!-- three small amount boxes -->
-            <div class="flex justify-end mt-5 mr text-xs space-x-2 text-gray-500">
-                <button class="bg-gray-100 rounded-md p-2">$1000</button>
-                <button class="bg-gray-100 rounded-md p-2">$5000</button>
-                <button class="bg-gray-100 rounded-md p-2">$10,000</button>
+            <div class="flex justify-end mt-5 mr text-xs space-x-2 text-gray-600">
+                <button class="bg-gray-200 hover:bg-gray-300 rounded-md p-2">₹1000</button>
+                <button class="bg-gray-200 hover:bg-gray-300 rounded-md p-2">₹5000</button>
+                <button class="bg-gray-200 hover:bg-gray-300 rounded-md p-2">₹10,000</button>
             </div>
 
             <h2 class="my-9">Payment Details</h2>
@@ -59,31 +60,26 @@
                 </button>
 
                 <button class="w-1/3 flex justify-center items-center pb-4 border-b border-gray-300 space-x-2">
+                    <?xml version="1.0" ?><svg enable-background="new 0 0 32 32" width="22" height="22" id="svg2" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"><g id="background"><rect fill="none" height="32" width="32"/></g><g id="arrow_x5F_right"><polygon points="10,2.001 24,16 10,30  " fill="#A8A8A8"/></g></svg>
+                    <span class="">BHIM/UPI</span>
+                </button>
+
+                <button class="w-1/3 flex justify-center items-center pb-4 border-b border-gray-300 space-x-2">
                     <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#A8A8A8"
                             d="M17.6374 11.9969C17.4225 11.5027 17.0917 11.0688 16.43 10.7035C16.0879 10.5101 15.7206 10.3655 15.3386 10.2738C15.5956 10.1544 15.832 9.99485 16.0389 9.80117C16.3431 9.52923 16.5737 9.18486 16.7093 8.8C16.834 8.4089 16.885 7.99802 16.8596 7.58828C16.8124 6.86641 16.6706 6.16602 16.2925 5.66328C15.9143 5.16055 15.3815 4.77383 14.6768 4.50313C14.1354 4.29688 13.5811 4.16797 12.7218 4.1207V1.375H11.003V4.125H9.62801V1.375H7.86629V4.125H4.125V6.1875H5.32254C5.69637 6.1875 5.94988 6.22188 6.07879 6.28633C6.19873 6.33764 6.29735 6.42868 6.35809 6.54414C6.41394 6.65156 6.43973 6.90508 6.43973 7.29609V14.7383C6.43973 15.125 6.41394 15.3742 6.35809 15.4859C6.30223 15.5977 6.27215 15.6965 6.13894 15.7566C6.00574 15.8168 6.00145 15.8125 5.63191 15.8125H4.49754L4.125 17.875H7.86328V20.625H9.625V17.875H11V20.625H12.7187V17.8578C13.8359 17.802 14.6309 17.6559 15.2711 17.4152C16.1004 17.1059 16.7363 16.6547 17.1918 16.0617C17.6473 15.4687 17.7934 14.5621 17.8333 13.8617C17.8621 13.2387 17.832 12.4352 17.6374 11.9969ZM9.625 6.44531H11V9.625H9.625V6.44531ZM9.625 15.5547V11.6875H11V15.5547H9.625ZM12.7187 6.61289C12.9766 6.72031 13.1441 6.93516 13.3117 7.15859C13.4965 7.40352 13.591 7.73008 13.591 8.07812C13.591 8.41328 13.4664 8.70117 13.2687 8.95898C13.1055 9.16953 12.9766 9.31563 12.7187 9.43594V6.61289ZM13.9562 14.6352C13.6211 14.9316 13.4277 15.0691 13.0066 15.2281C12.9125 15.2613 12.8163 15.2885 12.7187 15.3098V11.752C12.8868 11.7768 13.0504 11.826 13.2043 11.898C13.5395 12.0398 13.8574 12.1945 14.0551 12.4652C14.2742 12.7762 14.3941 13.1462 14.3988 13.5266C14.3975 13.9949 14.2772 14.3516 13.955 14.6352H13.9562Z" />
                     </svg>
                     <span class="">Bitcoin</span>
                 </button>
-
-                <button class="w-1/3 flex justify-center items-center pb-4 border-b border-gray-300 space-x-2">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M6 12L12 3L18 12L12 21L6 12Z" stroke="#A8A8A8" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        <path d="M6 12L12 9L18 12L12 14L6 12Z" stroke="#A8A8A8" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                    </svg>
-                    <span class="">Ethereum</span>
-                </button>
             </div>
 
             <label for="amount" class="  flex flex-col cursor-pointer mt-6">
                 <span class="font-inter text-sm not-italic font-medium text-gray-500">Card Number</span>
                 <div class="relative">
-                    <img class="top-8 right-4 w-12 absolute" src="img/mastercard.png" alt="">
+                    <img class="top-6 right-4 w-12 absolute" src="img/mastercard.png" alt="">
                     <input type="number" name="amount" id="amount"
-                        class="focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent rounded-lg w-full border-gray-400 mt-4 py-4 px-8"
-                        placeholder="XXXX-XXXX-XXXX-3004">
+                        class="focus:outline-none border border-gray-300  rounded-lg w-full mt-4 py-4 px-8"
+                        placeholder="XXXX-XXXX-XXXX-1234">
                 </div>
             </label>
 
@@ -124,7 +120,7 @@
                     </select>
                     <input type="number" size=""
                         class="w-1/3 py-2 px-2 rounded border border-gray-400 focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent"
-                        placeholder="*  *  *">
+                        placeholder="CVV">
                 </div>
             </div>
 
